# urirun-reasoner

./: .gitignore  README.md  pyproject.toml
tests/: test_reasoner.py
urirun_reasoner/: __init__.py  capabilities.py  cli.py  gates.py  generation_policy.py  generator.py  intent.py  intent_catalog.yaml  needs.py  planner.py
